--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -89,10 +89,12 @@
 	    			<div class="imageText">
 	    				<h2 class="header">Energy</h2>
 				        <p class="initialText">It is important to know how the use of energy can impact climate change. As we can see in this sunburst and choropleth map, more and more energy are being
-    used every year. The type of energy used include coals, natural gas, and oil. However, there are energy and resources that are non-renewable. Meaning
-    if we keep producing and consuming resources and energy, the world will eventually run dry. We need to know how to minimize our energy usage
-    not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This
-    visualization tells us story of how if we keep using energy like this, climate change will be greatly affected.</p>
+	used every year. The type of energy that are harmful include coals, natural gas, and oil, but not clean energy because it generally does not contribute to climate change since no fuel is combusted. 
+	In addition, there are energy and resources that are non-renewable. Meaning
+	if we keep producing and consuming non-renewable resources and energy, the world will eventually run dry. According to EPA 2017, energy production and usage contributes to more than 84% of greenhouse gas emissions.  Fossil fuels for example generate a lot of CO2 that is a factor to global warming. 
+	We need to know how to minimize our energy usage
+    in fossil fuels and switch to more cleaner energy. This will greatly reduce the impact energy will have on the environment. This
+    visualization serves to tell us story of the current rate of energy usage and how it impacts the environment.</p>
 			      	</div>
 	    		</div>
 	    	</div>
@@ -184,16 +186,19 @@
 	    				<h2 class="header">What does this Tell Us?</h2>
 				        <p class="initialText">
 							To look at an overview on energy consumption, we must first look at the map below. The red represents energy produced while the green is the energy consumed.
-							You can clearly see which countries produce the most energy (Russia) and which consumed the most energy. As you scroll through the years, you can see
+							It is also important to mention that the type of energy we are talking are fossil fuels, coals, etc. You can clearly see which countries produce the most energy (Russia) and which consumed the most energy. As you scroll through the years, you can see
 							China getting greener, meaning that it consumes more and more energy. This shows that at each year, more and more energy is being consumed than produce. As we consume 
-							more energy, we are beginning to run out of energy and resources. To see how much actually changed, we look at the comparison function of the map.
+							more energy, we are beginning to run out of energy and resources. This is why we should switch to an alternative cleaner energy source. To see how much actually changed, we look at the comparison function of the map.
 						</p>
 						<p class="initialText">
 							However, the map does not show the entirety of the situation, so we must look at it in a different perspective using a Sunburst.
-							The visual above compares each countries energy output and what they consumed and produced. And As you scroll through the years, the slice of the chart
+							The visual above compares each countries energy output and what they consumed and produced. And as you scroll through the years, the slice of the chart
 							containing Asia is slowly getting bigger and moving the right. This way you can see which countries/groups are consuming more and more energy and which
 							resource they are using. You can also look at more specifics by selecting a different subject in the drop-down menu. You can look at Natural Gas to see
 							who consumed the most and how it changed over time. Moreover, you can compare two years to see how much of a difference the two years are.
+							What we get out of this is that companies should make a quick and faster investment to clean energy, so that fossil fuels and natural gas production rates are reduced.
+							Currently, there are efforts to reduce fossil fuels in the United States and have clean energy such as solar energy, but there are other countries that have not done so yet
+							, which is why there is a sense of urgency to do so.
 						</p>
 			      	</div>
 	    		</div>
