fixed logos for rest of pages

--- a/src/seaLevel/seaLevel.html
+++ b/src/seaLevel/seaLevel.html
@@ -59,7 +59,7 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a class="logo" href="index.html">
-							<img id="tempLogo" src=".././img/logo.png" alt="logo">
+							<img id="seaLogo" src=".././img/logo.png" alt="logo">
 						</a>
 					</div>
 					<!-- /Logo -->
