--- a/src/contact.html
+++ b/src/contact.html
@@ -38,8 +38,8 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a class="logo" href="index.html">
-							<img src="./img/logo.png" alt="logo">
-						</a>
+                                <img id="contactLogo" src="/Data-Visualization/src/img/logo.png" alt="logo">
+                            </a>
 					</div>
 					<!-- /Logo -->
 
