--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -110,7 +110,7 @@
                 <h2 class="headerBar">Vizualizing Anomalies</h2>
                 <p class="white-text">For example, In Russia you can see a dramatic spike in temperature from the years 1994 to 1995, however the following years 
                     from 1995 to 1996 you see a dramatic decrease in temperature. And right after this decrease, the temperature continues to rise. This is strange compared to 
-                    the small increment and decrements around this time.
+                    the small increment and decrements we've seen around this time.
                 </p>
             </div>
         </div>
@@ -376,7 +376,7 @@
                 <p class="white-text">If you compare the temperature of 1901 France with 2014 France, you will notice how far we have pushed our limits. 
                     You can see that there has been an increase of 1.36°C over the past century. Although the warmer months haven't seen much increase,
                  the cooler months have seen a significant rise in temperature. If France can't stop this temperature climb, it'll experience the consequences of 
-                 reaching 1.5°C.  </p>
+                 reaching 1.5°C. These visuals allow us to see how close we are to our limit. Once we pass the 1.5°C limit, everything will change for the worse.  </p>
             </div>
         </div>
       </div>
