Re-inserted debate html

--- a/src/seaLevel/seaLevel.html
+++ b/src/seaLevel/seaLevel.html
@@ -39,7 +39,7 @@
 		<script src="https://d3js.org/d3-color.v1.min.js"></script>
 		<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-		 
+
 
 		 <link rel="stylesheet" type="text/css" href="bsg.css"/> <!-- bee swarm css file -->
 		 <link rel="stylesheet" type="text/css" href="zsb.css"/> <!-- sunburst css file -->
@@ -77,6 +77,7 @@
 				<nav id="nav">
 					<ul class="main-menu nav navbar-nav navbar-right">
 						<li><a href="../index.html">Home</a></li>
+						<li><a href="../debate/debate.html">The Debate</a></li>
 						<li><a href="../co2/co2.html">Carbon Dioxide</a></li>
 						<li><a href="../temperature/temperature.html">Temperature</a></li>
 						<li><a href="../energy/energy.html">Energy</a></li>
@@ -124,11 +125,11 @@
 
 	  <!-- @Alex -->
 	  <!-- Change the .js file and it should display on the website! -->
-	  
-	  
-	
-	 
-	  	
+
+
+
+
+
 	  <script type="text/javascript" src="beeSwarmSeaLevel.js"></script>
 	  <script type="text/javascript" src="buttons.js"></script>
 	  <!-- source displayed on website for data at bottom in footer-->
@@ -156,8 +157,8 @@
 
 
 
-	 
-	 
+
+
 
 	<!-- conclusion -->
 	<!-- <p class = "white-text">As we can see, nothing is guaranteed. Our planet gets worse and worse every day. Sea level rise continues to surpass it's predictions each year and new areas of glaciers begin to melt. Sea level rise poses an imminent threat to our way of life, considering how it is on a path to slowly destroy all our coastal cities. </p> -->
@@ -209,7 +210,7 @@
 
 
 		<!-- jQuery Plugins -->
-		
+
 		<script type="text/javascript" src="../js/jquery.min.js"></script>
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../js/main.js"></script>
