--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -125,7 +125,10 @@
   </select>
 
   <h2 id = "yeartxt">Year: 1990</h2>
-  <!-- SUNBURST -->
+
+  <!-- SUNBURST SVG-->
+  <div id = "Echart">
+	  
   <svg xmlns="http://www.w3.org/2000/svg" id="partitionSVG" width="1400" height="1400" style ="position:relative; left:0%;">
     <foreignObject width="1400" height="1400">
 			<h1>Global Energy Consumption</h1>
@@ -175,6 +178,8 @@
 
     </foreignObject>
   </svg>
+
+  </div>
 
   <script type="text/javascript" src="energySunburst.js"></script>
   <!-- Code Reference from https://observablehq.com/@d3/zoomable-sunburst -->
