--- a/src/contact.html
+++ b/src/contact.html
@@ -119,9 +119,10 @@
 				      </br>
 							<ul  class="Individual Contacts">
 								<li><i class="fa fa-envelope"></i>All Choropleths: dakriege@ucsc.edu</li>
-								<li><i class="fa fa-envelope"></i>CO2 Bubble: dakriege@ucsc.edu</li>
-								<li><i class="fa fa-envelope"></i>Temperature Bar: dakriege@ucsc.edu</li>
-								<li><i class="fa fa-envelope"></i>Energy Sunburst: dakriege@ucsc.edu</li>
+								<li><i class="fa fa-envelope"></i>CO2 Bubble: mtrotter@ucsc.edu</li>
+								<li><i class="fa fa-envelope"></i>Temperature Bar: schan54@ucsc.edu</li>
+                                <li><i class="fa fa-envelope"></i>Energy Sunburst: erong@ucsc.edu</li>
+                                <li><i class="fa fa-envelope"></i>Sea Level Sunburst: atutino@ucsc.edu</li>
 							</ul>
 				    </div>
 						<p
